testdata/baselines/reference/submodule/compiler/declFileWithExtendsClauseThatHasItsContainerNameConflict.errors.txt
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(14,38): error TS2304: Cannot find name 'EventManager'.


==== declFileWithExtendsClauseThatHasItsContainerNameConflict.ts (1 errors) ====
    declare module A.B.C {
        class B {
        }
    }
    
    module A.B {
        export class EventManager {
            id: number;
    
        }
    }
    
    module A.B.C {
        export class ContextMenu extends EventManager {
                                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'EventManager'.
            name: string;
        }
    }